# dictionary-generator

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  configure
src/: default.cpp  default.hpp  files.cpp  files.hpp  generator.cpp  generator.hpp  inputfile.cpp  inputfile.hpp  main.cpp
